package estructural.adapter.v2;

//TODO implementar pieza redonda
public class RoundPeg {
  private double radius;

  public RoundPeg(double radius) {
    this.radius = radius;
  }

  public double getRadius() {
    return radius;
  }
}
